catalog/kustomize/tailscale/security/tailscale-ingress.deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tailscale-ingress-deny-all
  annotations:
    networkpolicy.kubernetes.io/description: >-
      Restricts network traffic for Tailscale ingress pods by denying all connections.
spec:
  podSelector:
    matchLabels:
      tailscale.com/managed: "true"
      tailscale.com/parent-resource-type: ingress
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
